backups/iptables_backup
# Generated by iptables-save v1.4.21 on Mon Jun 25 10:25:44 2018
*nat
:PREROUTING ACCEPT [6703:1056110]
:INPUT ACCEPT [73:3600]
:OUTPUT ACCEPT [1007:63816]
:POSTROUTING ACCEPT [1007:63816]
COMMIT
# Completed on Mon Jun 25 10:25:44 2018
# Generated by iptables-save v1.4.21 on Mon Jun 25 10:25:44 2018
*mangle
:PREROUTING ACCEPT [388631:536141687]
:INPUT ACCEPT [386131:535728837]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [79175:18149655]
:POSTROUTING ACCEPT [79175:18149655]
COMMIT
# Completed on Mon Jun 25 10:25:44 2018
# Generated by iptables-save v1.4.21 on Mon Jun 25 10:25:44 2018
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [79175:18149655]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 193.137.5.0/24 -p icmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -s 193.137.5.0/24 -p tcp -m tcp --dport 10000 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -m state --state NEW -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
# Completed on Mon Jun 25 10:25:44 2018
